Apply more automatic Java refactoring (#3785)
This PR applies a few small simplifications suggested by IntelliJ:
* [Expression
lambdas](https://docs.oracle.com/javase/tutorial/java/javaOO/lambdaexpressions.html)
* Removal of dead-code default cases in switches
* Simplification of stream + optional call chains (removal of redundant
calls etc.)